NYS-76: Resolve menu visibility issues

--- a/web/themes/custom/nys/components/02-components/menu--senator-dashboard/src/menu--senator-dashboard.scss
+++ b/web/themes/custom/nys/components/02-components/menu--senator-dashboard/src/menu--senator-dashboard.scss
@@ -94,7 +94,7 @@
       padding: 24px;
       position: absolute;
       top: 100%;
-      z-index: 5;
+      z-index: 101;
     }
   }
 
