--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-senators-events/nysenate-senators-events.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-senators-events/nysenate-senators-events.scss
@@ -800,3 +800,7 @@
     display: inline;
   }
 }
+
+form[data-drupal-selector="views-exposed-form-senator-events-upcoming-events"] .form--inline {
+  display: block;
+}
